Implemented configuring FTS for S3 hosts
Added client certificate for calls to FTS to configure S3 hosts
Added another REST client to EgiDataTransfer for calls to FTS to configure S3 hosts (uses client certificate)
Now using class URI instead of URL to validate destination URLs
Fixed handling invalid URLs when embedding FTP credentials
Renamed keys in config file to singular (easier to set config values using env vars)
Updated readme with new config key names